# central

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTEXT.md  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json
services/backend/: Cargo.toml  Dockerfile  README.md  project.json
services/backend/src/: context.rs  error.rs  main.rs  test_support.rs
services/backend/src/config/: mod.rs  tests.rs
services/backend/src/domains/: mod.rs
services/backend/src/domains/finance/: contracts.rs  http.rs  http_tests.rs  mod.rs  model.rs  model_tests.rs  repository.rs  service.rs  validation.rs
services/backend/src/domains/finance/accounts/: mod.rs
services/backend/src/domains/finance/balances/: mod.rs
services/backend/src/domains/finance/budgets/: mod.rs
services/backend/src/domains/finance/categories/: mod.rs
services/backend/src/domains/finance/dashboard/: mod.rs
services/backend/src/domains/finance/domain/: contracts.rs  mod.rs  model.rs  model_tests.rs  service.rs
services/backend/src/domains/finance/http/: handlers.rs  mod.rs  tests.rs
services/backend/src/domains/finance/infrastructure/: repository.rs
services/backend/src/domains/finance/ledger/: mod.rs
services/backend/src/domains/finance/recurring/: mod.rs
services/backend/src/domains/weather/: contracts.rs  http.rs  http_tests.rs  mod.rs  model_tests.rs  provider.rs  provider_tests.rs  repository.rs  repository_tests.rs  service.rs  service_tests.rs
services/backend/src/domains/weather/domain/: contracts.rs  model.rs  (+2 more)
services/backend/src/http/: mod.rs
services/voice/: Cargo.toml  Dockerfile  README.md  project.json
services/voice/src/: config.rs  context.rs  error.rs  main.rs
services/voice/src/domain/: model.rs  service.rs
services/voice/src/http/: handlers.rs  mod.rs  payload.rs
services/voice/src/infrastructure/: llm.rs  mod.rs  stt.rs
services/weather/: Cargo.toml  Dockerfile  README.md  project.json
services/weather/src/: app_state.rs  config.rs  context.rs  main.rs  mcp.rs
services/weather/src/config/: mod.rs  tests.rs
services/weather/src/domain/: contracts.rs  model.rs  model_tests.rs  service.rs  service_tests.rs
services/weather/src/http/: handlers.rs  mod.rs  tests.rs
services/weather/src/infrastructure/: provider.rs  provider_tests.rs  repository.rs  repository_tests.rs
services/weather/src/mcp/: mod.rs  protocol.rs  tests.rs  transport.rs
services/weather/src/weather/: model.rs  provider.rs
(+302 files in other folders)
