[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
chrono-tz = "0.10.4"
futures-core = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time", "io-std"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
